// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price /> should not pass unitPriceMin for non variants 1`] = `
<PlaceholderLabel
  className="css-q720h0"
  ready={true}
>
  <Price
    className="css-1mvf8bp"
    currency="USD"
    discounted={false}
    taxDisclaimer={true}
    unitPrice={90.5}
    unitPriceMin={0}
  />
</PlaceholderLabel>
`;

exports[`<Price /> should pass unitPriceMin for variants 1`] = `
<PlaceholderLabel
  className="css-q720h0"
  ready={true}
>
  <Price
    className="css-1mvf8bp"
    currency="USD"
    discounted={false}
    taxDisclaimer={true}
    unitPrice={90.5}
    unitPriceMin={80.5}
  />
</PlaceholderLabel>
`;

exports[`<Price /> should render portals 1`] = `
<SurroundPortals
  portalName="product.price"
  portalProps={
    {
      "hasProductVariants": true,
      "price": {
        "currency": "USD",
        "discount": 0,
        "unitPrice": 90.5,
        "unitPriceMin": 80.5,
      },
      "showTaxDisclaimer": true,
    }
  }
>
  <Content
    hasProductVariants={true}
    price={
      {
        "currency": "USD",
        "discount": 0,
        "unitPrice": 90.5,
        "unitPriceMin": 80.5,
      }
    }
    showTaxDisclaimer={true}
  />
</SurroundPortals>
`;
